--- a/src/app/components/lookupresults/lookup-results.component.html
+++ b/src/app/components/lookupresults/lookup-results.component.html
@@ -15,7 +15,7 @@
 
 <ion-card *ngFor="let foundGame of retrievedBoardgames | unavailable:showUnavailableResults">
   <ion-card-header class="head-text-wrap">{{foundGame.name}}</ion-card-header>
-  <img src="{{foundGame.image}}"/>
+  <a target="_blank" href="{{foundGame.url}}"><img src="{{foundGame.image}}"/></a>
   <ion-row>
     <ion-col>
       <button ion-button round small icon-left color="primary">
