--- a/src/app/components/spelonklookup/spelonk-lookup.component.html
+++ b/src/app/components/spelonklookup/spelonk-lookup.component.html
@@ -1,3 +1,3 @@
 <h3>Find game in <a href="http://www.spelonk.be">Spelonk</a> inventory</h3>
 
-<lookup-results [lookupService]="spelonkLookupService"></lookup-results>
+<lookup-results [initWithLookup]="initWithLookup" (gameSelected)="handleSelection($event)" [lookupService]="spelonkLookupService"></lookup-results>
