--- a/src/app/components/lotanalookup/lotana-lookup.component.html
+++ b/src/app/components/lotanalookup/lotana-lookup.component.html
@@ -1,5 +1,5 @@
-<h3>Find game in <a href="http://wwww.lotana.be">Lotana</a> inventory</h3>
+<h1>Find game in <a href="http://wwww.lotana.be">Lotana</a> inventory</h1>
 
-<lookup-results [lookupService]="lotanaLookupService"></lookup-results>
+<lookup-results (gameSelected)="handleSelection($event)" [lookupService]="lotanaLookupService"></lookup-results>
 
 <div id="jquerydump" style="display:none"></div>
