--- a/src/app/components/queenofgameslookup/queenofgames-lookup.component.html
+++ b/src/app/components/queenofgameslookup/queenofgames-lookup.component.html
@@ -1,3 +1,3 @@
 <h3>Find game in <a href="http://www.queenofgames.be/">Queen of Games</a> inventory</h3>
 
-<lookup-results [lookupService]="queenOfGamesLookupService"></lookup-results>
+<lookup-results [initWithLookup]="initWithLookup" (gameSelected)="handleSelection($event)"  [lookupService]="queenOfGamesLookupService"></lookup-results>
