--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,5 @@
 // http://ionicframework.com/docs/theming/
 
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -17,4 +16,8 @@
 
 .head-text-wrap {
   white-space: normal
+}
+
+ion-item.cheapest {
+  background-color: #c4643f;
 }
